Add optons for state

--- a/etc/modules/graphite2.cfg
+++ b/etc/modules/graphite2.cfg
@@ -73,5 +73,12 @@ define module {
    #send_warning      False
    #send_critical     False
    #send_min          False
-   #send_max          False
+   #send_max          False   
+   
+   # Options to send state for hosts or services.
+   # This feature is useful to have a availability graph
+   # 1 is to enable - 0 is to disable 
+   state_enable 1 # Enable or disable this feature
+   state_host   1 # If state_enable is enable, will send state for host
+   state_service 1 # If state_enable is enable, will send state for service
 }
