More details in graphite2.cfg

--- a/etc/modules/graphite2.cfg
+++ b/etc/modules/graphite2.cfg
@@ -74,4 +74,15 @@ define module {
    #send_critical     False
    #send_min          False
    #send_max          False
+   
+   # Options to send state for hosts or services.
+   # This feature is useful to have a availability graph
+   # 1 is to enable - 0 is to disable
+   # Default all is disable
+   #-- Enable or disable this feature
+   state_enable 0
+   #-- If state_enable is enable, will send state for all hosts
+   state_host   0
+   #-- If state_enable is enable, will send state for all services
+   state_service 0
 }
